Added angular material to the project

--- a/apps/github-search/src/app/app.component.html
+++ b/apps/github-search/src/app/app.component.html
@@ -1,4 +1,6 @@
-
+<mat-toolbar color="primary">
+  Github User Search
+</mat-toolbar>
 <main tabindex="-1">
   <router-outlet></router-outlet>
 </main>
