User search API call with progress indicator

--- a/apps/github-search/src/app/search/components/search-page/search-page.component.html
+++ b/apps/github-search/src/app/search/components/search-page/search-page.component.html
@@ -1,1 +1,11 @@
 <p>search-page works!</p>
+
+<button color="accent" mat-raised-button (click)="triggerSearch()">Search</button>
+
+<br>
+
+<mat-progress-bar [value]="searchProgress$ | async"></mat-progress-bar>
+
+<br>
+
+{{ searchResults$ | async | json }}
