Display user details when selected

--- a/apps/github-search/src/app/app.component.html
+++ b/apps/github-search/src/app/app.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar color="primary">
-  Github User Search
+  <h1>Github User Search</h1>
 </mat-toolbar>
-<main tabindex="-1">
+<main class="content" tabindex="-1">
   <router-outlet></router-outlet>
 </main>
