--- a/apps/github-search/src/app/search/components/search-page/search-page.component.css
+++ b/apps/github-search/src/app/search/components/search-page/search-page.component.css
@@ -1,7 +1,31 @@
-.progress-bar-holder {
-  height: 5px;
+:host {
+  display: grid;
+  height: inherit;
+  grid-template-columns: 2fr 1fr;
+  grid-template-rows: 1fr 2fr;
+  grid-template-areas:
+    "form errors"
+    "list details";
+  box-sizing: border-box;
+  padding: 1rem;
 }
 
-githubsearch-search-results-table {
-  height: 50vh;
+.search-filter {
+  padding: 1rem;
+  grid-area: form;
+}
+
+.results-table {
+  padding: 1rem;
+  grid-area: list;
+}
+
+.user-details {
+  grid-area: details;
+  padding: 1rem;
+}
+
+.error-message {
+  grid-area: errors;
+  padding: 1rem;
 }
