--- a/apps/github-search/src/app/search/components/search-results-table/search-results-table.component.css
+++ b/apps/github-search/src/app/search/components/search-results-table/search-results-table.component.css
@@ -7,6 +7,7 @@
 .table-scrollable-container {
   overflow: auto;
   max-height: 50vh;
+  height: 50vh;
 }
 
 mat-table {
@@ -21,4 +22,15 @@ mat-table {
 
 .username {
   margin-left: 1.5rem;
+}
+
+.no-data-row {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+}
+
+.see-details-button-text {
+  margin-right: 1.5rem;
 }
