Allow user to stop query, if it takes too long.

--- a/apps/github-search/src/app/app.component.html
+++ b/apps/github-search/src/app/app.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar color="primary">
   <h1>Github User Search</h1>
 </mat-toolbar>
-<main class="content" tabindex="-1">
+<main class="content">
   <router-outlet></router-outlet>
 </main>
