Ran prettier on codebase

--- a/apps/github-search/src/app/search/components/search-page/search-page.component.css
+++ b/apps/github-search/src/app/search/components/search-page/search-page.component.css
@@ -4,8 +4,8 @@
   grid-template-columns: 2fr 1fr;
   grid-template-rows: 1fr 2fr;
   grid-template-areas:
-    "form errors"
-    "list details";
+    'form errors'
+    'list details';
   box-sizing: border-box;
   padding: 1rem;
 }
