--- a/apps/github-search/src/app/search/components/search-page/search-page.component.html
+++ b/apps/github-search/src/app/search/components/search-page/search-page.component.html
@@ -1,19 +1,25 @@
 <form class="search-filter" [formGroup]="form">
-
-  <button *ngLet="isSearching$ | async as isSearching"
-          mat-raised-button
-          class="search-button"
-          [color]="isSearching ? 'warn' : 'accent'"
-          (click)="triggerSearch(isSearching)">
+  <button
+    *ngLet="isSearching$ | async as isSearching"
+    mat-raised-button
+    class="search-button"
+    [color]="isSearching ? 'warn' : 'accent'"
+    (click)="triggerSearch(isSearching)"
+  >
     <ng-container *ngIf="!isSearching; else stop">Search</ng-container>
     <ng-template #stop>Stop</ng-template>
   </button>
 </form>
-<githubsearch-search-results-table class="results-table" [users]="users$ | async">
-  <mat-paginator [length]="totalCount$ | async"
-                 [pageSize]="pageSize$ | async"
-                 (page)="onPagination($event)"
-                 [pageSizeOptions]="[5, 10, 25, 100]">
+<githubsearch-search-results-table
+  class="results-table"
+  [users]="users$ | async"
+>
+  <mat-paginator
+    [length]="totalCount$ | async"
+    [pageSize]="pageSize$ | async"
+    (page)="onPagination($event)"
+    [pageSizeOptions]="[5, 10, 25, 100]"
+  >
   </mat-paginator>
 </githubsearch-search-results-table>
 
@@ -21,6 +27,3 @@
 
 <githubsearch-user-details class="user-details" [user]="selectedUser$ | async">
 </githubsearch-user-details>
-
-
-
