--- a/apps/github-search/src/app/search/components/search-results-table/search-results-table.component.html
+++ b/apps/github-search/src/app/search/components/search-results-table/search-results-table.component.html
@@ -1,18 +1,22 @@
-<div class=" mat-elevation-z8">
+<div class="mat-elevation-z8">
   <div class="table-scrollable-container">
     <mat-table mat-table [dataSource]="users">
       <!-- Id -->
       <ng-container matColumnDef="id" [sticky]="true">
         <mat-header-cell *matHeaderCellDef>ID</mat-header-cell>
-        <mat-cell *matCellDef="let element"> {{element.id}} </mat-cell>
+        <mat-cell *matCellDef="let element"> {{ element.id }} </mat-cell>
       </ng-container>
 
       <!-- Username Column -->
       <ng-container matColumnDef="login" [sticky]="true">
         <mat-header-cell *matHeaderCellDef> Username</mat-header-cell>
         <mat-cell *matCellDef="let element">
-          <img class="avatar" [src]="element.avatar_url" [alt]="element.login + '\'s avatar'" />
-          <span class="username">{{element.login}}</span>
+          <img
+            class="avatar"
+            [src]="element.avatar_url"
+            [alt]="element.login + '\'s avatar'"
+          />
+          <span class="username">{{ element.login }}</span>
         </mat-cell>
       </ng-container>
 
@@ -20,7 +24,13 @@
       <ng-container matColumnDef="viewOnGithub" [sticky]="true">
         <mat-header-cell *matHeaderCellDef>GibHub link</mat-header-cell>
         <mat-cell *matCellDef="let element">
-          <a class="username" [href]="element.html_url" target="_blank" referrerpolicy="no-referrer">View {{element.login}} on GitHub</a>
+          <a
+            class="username"
+            [href]="element.html_url"
+            target="_blank"
+            referrerpolicy="no-referrer"
+            >View {{ element.login }} on GitHub</a
+          >
         </mat-cell>
       </ng-container>
 
@@ -35,14 +45,15 @@
         </mat-cell>
       </ng-container>
 
-      <mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></mat-header-row>
-      <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+      <mat-header-row
+        *matHeaderRowDef="displayedColumns; sticky: true"
+      ></mat-header-row>
+      <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
       <tr class="mat-row no-data-row" *matNoDataRow>
         <h3>
           No users match your search criteria.
         </h3>
       </tr>
-
     </mat-table>
   </div>
   <ng-content></ng-content>
