--- a/apps/github-search/src/styles.css
+++ b/apps/github-search/src/styles.css
@@ -1,9 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body {
+html,
+body {
   width: 100vw;
   height: 100vh;
   padding: 0;
   margin: 0;
-  font-family: Roboto, "Helvetica Neue", sans-serif;
+  font-family: Roboto, 'Helvetica Neue', sans-serif;
 }
