--- a/apps/github-search/src/app/search/components/search-page/search-page.component.css
+++ b/apps/github-search/src/app/search/components/search-page/search-page.component.css
@@ -4,7 +4,7 @@
   grid-template-columns: 2fr 1fr;
   grid-template-rows: 1fr 2fr;
   grid-template-areas:
-    'form errors'
+    'form messages'
     'list details';
   box-sizing: border-box;
   padding: 1rem;
@@ -25,8 +25,8 @@
   padding: 1rem;
 }
 
-.error-message {
-  grid-area: errors;
+.messages {
+  grid-area: messages;
   padding: 1rem;
 }
 
