--- a/apps/github-search/src/app/search/components/user-detail/user-details.component.html
+++ b/apps/github-search/src/app/search/components/user-detail/user-details.component.html
@@ -2,11 +2,13 @@
   <mat-card class="mat-elevation-z8">
     <mat-card-header>
       <mat-card-title>{{ user.name }}</mat-card-title>
-      <mat-card-subtitle>{{ user.login }} {{ user.location }}</mat-card-subtitle>
+      <mat-card-subtitle>{{ user.login }}</mat-card-subtitle>
+      <mat-card-subtitle>Location: {{ user.location }}</mat-card-subtitle>
       <mat-card-subtitle>Company: {{ user.company }}</mat-card-subtitle>
     </mat-card-header>
     <mat-card-content>
       <p>{{ user.bio }}</p>
+      <p>{{ user.email || 'No public e-mail present.' }}</p>
       <div class="user-details">
         <div class="info">
           <p>
