Added indeterminate loading indicator, so users can see if a query takes too long

--- a/apps/github-search/src/app/search/components/search-page/search-page.component.html
+++ b/apps/github-search/src/app/search/components/search-page/search-page.component.html
@@ -1,6 +1,7 @@
 <div class="search-filter">
   <githubsearch-search-filter-form [isSearchInProgress]="isSearching$ | async" (triggerSearch)="triggerSearch($event)">
   </githubsearch-search-filter-form>
+  <mat-progress-bar mode="indeterminate" *ngIf="isSearching$ | async"></mat-progress-bar>
 </div>
 
 <githubsearch-search-messages class="messages"></githubsearch-search-messages>
