Fixed pagination reset issue when new search is triggered from another paginated result

--- a/apps/github-search/src/app/search/components/search-filter-form/search-filter-form.component.html
+++ b/apps/github-search/src/app/search/components/search-filter-form/search-filter-form.component.html
@@ -78,7 +78,7 @@
         mat-raised-button
         class="search-button"
         [color]="isSearchInProgress ? 'warn' : 'accent'"
-        (click)="triggerSearch.next(isSearchInProgress)"
+        (click)="searchButtonClicked(isSearchInProgress)"
       >
         <ng-container *ngIf="!isSearchInProgress; else stop">Search</ng-container>
         <ng-template #stop>Stop</ng-template>
