--- a/apps/github-search/src/app/search/components/search-page/search-page.component.html
+++ b/apps/github-search/src/app/search/components/search-page/search-page.component.html
@@ -10,6 +10,7 @@
   <mat-paginator
     [length]="totalCount$ | async"
     [pageSize]="pageSize$ | async"
+    [pageIndex]="pageIndex$ | async"
     (page)="onPagination($event)"
     [pageSizeOptions]="[5, 10, 25, 100]"
   >
