--- a/apps/github-search/src/app/search/components/user-detail/user-details.component.html
+++ b/apps/github-search/src/app/search/components/user-detail/user-details.component.html
@@ -1,8 +1,10 @@
 <ng-container *ngIf="user; else NoUserDetail">
   <mat-card class="mat-elevation-z8">
     <mat-card-header>
-      <mat-card-title>{{ user.name }}</mat-card-title>
-      <mat-card-subtitle>{{ user.login }} joined {{ user.created_at | date }}</mat-card-subtitle>
+      <mat-card-title data-test-id="user-name">{{ user.name }}</mat-card-title>
+      <mat-card-subtitle data-test-id="user-joined"
+        >{{ user.login }} joined {{ user.created_at | date }}</mat-card-subtitle
+      >
       <mat-card-subtitle>Location: {{ user.location }}</mat-card-subtitle>
       <mat-card-subtitle>Company: {{ user.company }}</mat-card-subtitle>
     </mat-card-header>
